// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transmission/lineEncoding must encode just one beacon 1`] = `
"page	landing
key	abcdefg
id	42
pageVisible	true"
`;

exports[`transmission/lineEncoding must encode multiple beacons 1`] = `
"page	landing
key	abcdefg
id	42
pageVisible	true

page	product-details
key	abcdefg
id	43
pageVisible	false
m_spec	{\\"signedIn\\":true}"
`;

exports[`transmission/lineEncoding must handle reserved characters in keys and values 1`] = `
"key\\\\nwith\\\\nnew\\\\nline	a
key\\\\twith\\\\ttabstop	b
value with new line	a\\\\nb\\\\nc
value with tabstop	a\\\\tb\\\\tc
key\\\\\\\\with\\\\nall\\\\treserved\\\\\\\\ncharacters	value\\\\\\\\ with\\\\nall\\\\treserved\\\\\\\\ncharacter"
`;
